[package]
name = "image-forensic-tool"
version = "0.1.0"
edition = "2021"
authors = ["Lance Miller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_proc"
path = "src/lib/lib.rs"

[dependencies]
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"
tera = "1.19.1"
kamadak-exif = "0.5.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

